2012-07-11  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSKeyedArchiver.m:
        * Source/NSCoder.m:
        * Source/Additions/GSObjCRuntime.m:
        * Source/NSArchiver.m:
        * Headers/GNUstepBase/GSObjCRuntime.h:
        Have leading type qualifiers and laout information skipped when
        encoding a value of on ObjC type, rather than objecting that the
        supplied type string is not a known type.
        Fix for bug #36824

2012-07-09  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSFFIInvocation.m: Fix for bug #36706
        * Source/NSObject.m: Also, apply patch by Niels Grewe with modsvn commit

2012-07-09  Sebastian Reitenbach <buzzdee>

        * Source/NSThread.m: Fixes test for posix thread scheduling.

2012-07-09  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSBundle.m: Fixes for bug #34815 ... map between old and
        new style language names and use the best language specific
        resource available.
        * Resources/Languages/Locale.canonical: Add mappings from three
        letter language names to two letter names where they exist.

2012-07-08  Richard Frith-Macdonald <rfm@gnu.org>

        * Headers/GNUstepBase/GSVersionMacros.h:
        fix for bug #36650
        * Source/NSFileManager.m: Apply rewritten patch by Sergey Golovin
        * Source/NSBundle.m: Fix for bug #34815 ... we shoudl now move to
        using ISO names.

2012-07-08  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSURL.m:
        * Source/NSURLHandle.m:
        Re-load a cached  handle if the content has been invalidated.
        Set the status of a file handle to not-loaded if the fiel is modified.
        Should fix bug #36726
        
2012-07-05  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSBundle.m: Don't assume that code loading won't be called
        re-entrantly.

2012-07-05  Quentin Mathe <quentin.mathe@gmail.com>

	* Source/NSPathUtilities.m: Fixed constant string comparison error 